--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,12 @@ width: 100%;
 height: 500px; 
 border: none;
 }
+@media (max-width: 480px) {
+  .pagina1{
+        font-size: 14px;
+        background-color: lightcoral;
+    }
+}
 /*______________________________________________________________________________SEGUNDA PAGINA WEB__________________________________________________________________________________________________________*/
 
 .pagina2 {
@@ -191,6 +197,12 @@ width: 100%;
 height: 500px; 
 border: none;
     }
+@media (max-width: 480px) {
+  .pagina2{
+        font-size: 14px;
+        background-color: lightcoral;
+    }
+}
     /*___________________________________________________________________________________TERCERA PARTE__________________________________________________*/
 .pagina3 {
  font-family: Arial, sans-serif;
@@ -283,6 +295,12 @@ background-color: rgb(0, 0, 0);
 width: 100%; 
 height: 500px; 
 border: none;
+}
+@media (max-width: 480px) {
+  .pagina3{
+        font-size: 14px;
+        background-color: lightcoral;
+    }
 }
 /*___________________________________________________________________________________________Cuarta PARTE_______________________________________________________________*/
 
@@ -384,6 +402,12 @@ width: 100%;
 height: 500px; 
 border: none;
     }
+@media (max-width: 480px) {
+  .pagina4{
+        font-size: 14px;
+        background-color: lightcoral;
+    }
+}
     /*____________________________________________________________________________________PAGINA QUINTA_________________________________________________________________*/
     .pagina5 {
  font-family:  Arial, sans-serif;
@@ -486,6 +510,12 @@ width: 100%;
 height: 500px; 
 border: none;
     }
+@media (max-width: 480px) {
+  .pagina5{
+        font-size: 14px;
+        background-color: lightcoral;
+    }
+}
 /*_________________________________________________________________________QUINTA PARTE____________________________________________________________________________________*/
 
 html {
@@ -743,6 +773,14 @@ button {
         font-size: 14px;
     }
 }
+@media (max-width: 480px) {
+  .formulario {
+        font-size: 14px;
+        background-color: lightcoral;
+    }
+}
+
+
 
 
 
